kubectl/authentik/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      containers:
        - name: postgresql
          image: docker.io/library/postgres:17.7-bookworm
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: nfs
              mountPath: /var/lib/postgresql/data
              subPath: applications/authentik/volumes/pgdatabase             
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "1024Mi"
              cpu: "900m"
          # command: ["sleep", "infinity"]
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-server
  labels:
    app: authentik-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-server
  template:
    metadata:
      labels:
        app: authentik-server
    spec:
      containers:
        - name: authentik-server
          image: ghcr.io/goauthentik/server:2025.10.3
          args:
            - server
          volumeMounts:
            - name: nfs
              mountPath: /media
              subPath: applications/authentik-4/volumes/media
            - name: nfs
              mountPath: /templates
              subPath: applications/authentik-4/volumes/custom-templates
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          resources:
            requests:
              memory: "720Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "900m"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-worker
  labels:
    app: authentik-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentik-worker
  template:
    metadata:
      labels:
        app: authentik-worker
    spec:
      containers:
        - name: authentik-worker
          image: ghcr.io/goauthentik/server:2025.10.3
          args:
            - worker
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: metrics
              containerPort: 9300
              protocol: TCP
          volumeMounts:
            - name: nfs
              mountPath: /media
              subPath: applications/authentik-4/volumes/media
            - name: nfs
              mountPath: /certs
              subPath: applications/authentik-4/volumes/certs
            - name: nfs
              mountPath: /templates
              subPath: applications/authentik-4/volumes/custom-templates
          resources:
            requests:
              memory: "720Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"
              cpu: "900m"
      volumes:
        - name: nfs
          persistentVolumeClaim:
            claimName: truenas-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  type: ClusterIP
  ports:
    - name: postgresql
      port: 5432
      targetPort: 5432
  selector:
    app: postgresql
---
apiVersion: v1
kind: Service
metadata:
  name: authentik-server
  annotations:
    metallb.io/address-pool: "internal-pool"
    metallb.io/allow-shared-ip: "shared-ip"
  labels:
    app: authentik-server
spec:
  type: LoadBalancer
  selector:
    app: authentik-server
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: https
      port: 9443
      targetPort: 9443
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-security-headers@kubernetescrd
spec:
  tls:
    - hosts:
      - authentik.joeberry.org
  rules:
  - host: authentik.joeberry.org
    http:
      paths:
      - backend:
          service:
            name: authentik-server            
            port:
              number: 9443
        path: /
        pathType: Prefix
      - backend:
          service:
            name: authentik-server            
            port:
              number: 9000
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authentik-ingress-http
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: authentik.joeberry.org
    http:
      paths:
      - backend:
          service:
            name: authentik-server            
            port:
              number: 9443
        path: /
        pathType: Prefix
      - backend:
          service:
            name: authentik-server            
            port:
              number: 9000
        path: /
        pathType: Prefix
